Fixed the dark blue domain buttons issues (was a spacing issue in the csv file, changed the Download CSV button to 'Send me the CSV', centered the map, made the buttons bigger, deleted the FAQ page'

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -34,7 +34,7 @@
   font-family: 'Source Sans 3', sans-serif;
   font-size: 30px;
   font-weight: 700;
-  margin: 0;
+  margin-top: 30px;
   color: white;
 }
 
@@ -54,6 +54,7 @@
 .nav-link {
   font-family: 'Source Sans 3', sans-serif;
   font-size: 1.1rem;
+    font-weight: 700;
   color: white;
   text-decoration: none;
   transition: opacity 0.3s;
